--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^3.0.3",
     "@sanity/image-url": "^1.0.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "@vimeo/player": "^2.15.3",
     "axios": "^1.2.1",
-    "base64-string": "^1.1.2",
+    "base64-string": "1.1.2",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.2.6",
+    "clsx": "^2.1.1",
     "contrast-color": "^1.0.1",
     "cross-env": "^7.0.3",
     "embla-carousel-react": "^7.0.1",
@@ -29,6 +33,7 @@
     "framer-motion": "^8.0.2",
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
+    "lucide-react": "^0.469.0",
     "marqy": "^0.0.8",
     "next": "^12.0.7",
     "next-themes": "^0.2.1",
@@ -42,7 +47,10 @@
     "react-keyed-flatten-children": "^1.3.0",
     "shopify-buy": "^2.13.0",
     "sitemap": "^7.0.0",
-    "swr": "^2.0.0"
+    "stripe": "^17.5.0",
+    "swr": "^2.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.1",
