--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.2.6",
     "clsx": "^2.1.1",
-    "contrast-color": "^1.0.1",
+    "contrast-color": "1.0.1",
     "cross-env": "^7.0.3",
     "embla-carousel-react": "^7.0.1",
-    "focus-trap-react": "^10.0.0",
+    "focus-trap-react": "10.0.0",
     "framer-motion": "^8.0.2",
     "js-cookie": "^3.0.0",
     "jsondiffpatch": "^0.4.1",
