--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "qs": "^6.10.1",
     "query-string": "^8.1.0",
     "raw-body": "^2.4.1",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-cool-inview": "3.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.41.2",
     "react-keyed-flatten-children": "^1.3.0",
     "shopify-buy": "^2.13.0",
